cambios echos en la landing page

--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
 			</div>
 			<!-- Intro end -->
 
-			<!-- Skills -->
+			<!-- Skills 
 			<div class="skills">
 
 				<div class="row">
 
 					<div class="col-md-6 col-sm-6 col-xs-12 item">
 						<div class="skill-info clearfix">
-							<h3 class="pull-left">Photoshop</h3>
-							<span class="pull-right">98%</span>
+							<h3 class="pull-left">Gestión de proyectos</h3>
+							<span class="pull-right">90%</span>
 						</div>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuenow="99"
@@ -153,7 +153,7 @@
 
 					<div class="col-md-6 col-sm-6 col-xs-12 item">
 						<div class="skill-info clearfix">
-							<h3 class="pull-left">Illustrator</h3>
+							<h3 class="pull-left">Diseño de interfaces</h3>
 							<span class="pull-right">80%</span>
 						</div>
 						<div class="progress">
@@ -165,8 +165,8 @@
 
 					<div class="col-md-6 col-sm-6 col-xs-12 item">
 						<div class="skill-info clearfix">
-							<h3 class="pull-left">Indesign</h3>
-							<span class="pull-right">45%</span>
+							<h3 class="pull-left">Programación</h3>
+							<span class="pull-right">75%</span>
 						</div>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuenow="45"
@@ -177,8 +177,8 @@
 
 					<div class="col-md-6 col-sm-6 col-xs-12 item">
 						<div class="skill-info clearfix">
-							<h3 class="pull-left">Corel Draw</h3>
-							<span class="pull-right">60%</span>
+							<h3 class="pull-left">Comunicación</h3>
+							<span class="pull-right">95%</span>
 						</div>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuenow="60"
@@ -189,7 +189,7 @@
 
 				</div>
 
-			</div>
+			</div>-->
 			<!-- Skills end -->
 		</section>
 		<!-- Section About end -->
@@ -200,7 +200,7 @@
 			<div class="section-header-light">
 				<h2>Fun Facts</h2>
 			</div>
-
+			<!--
 			<div class="row">
 
 				<div class="col-md-3 col-sm-3 col-xs-6 fact-item">
@@ -223,7 +223,7 @@
 					<span class="text">Awards won</span>
 				</div>
 
-			</div>
+			</div>-->
 
 			<div class="overlay"></div>
 
@@ -234,7 +234,7 @@
 		<section id="resume" class="resume">
 			
 			<div class="section-header">
-				<h2>Education / Experience</h2>
+				<h2>Educación</h2>
 				<a href="#" class="resume-download" data-toggle="tooltip" data-placement="bottom" title="Download">
 					<i class="fa fa-download" aria-hidden="true"></i>
 				</a>
@@ -242,46 +242,46 @@
 
 			<div class="row">
 
-				<!-- Carousel -->
 				<div class="resume-carousel">
 
 					<div class="carousel-item">
 
 						<div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="top-item resume-item">
-								<h2>Graphic Designer</h2>
-								<span>2016 - 2015</span>
-								<p>Has fuisset scripserit et est munere ignota virtute cu, tota timeam.</p>
+								<h2>Tecnólogo en Análisis y desarrollo de Sistemas de Información.</h2>
+								<span>2016 - 2018</span>
+								<p>Servicio Nacional de Aprendizaje SENA</p>
 							</div>
 						</div>
 
 						<div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="top-item resume-item">
-								<h2>Designer</h2>
-								<span>2015 - 2014</span>
-								<p>Has fuisset scripserit et est munere ignota virtute cu, tota timeam.</p>
+								<h2>Ingeniero de Sistemas</h2>
+								<span>2016 - 2022</span>
+								<p>Universidad de Boyacá</p>
+							
 							</div>
 						</div>
 
-						<div class="col-md-6 col-sm-6 col-xs-12">
+						<!-- <div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="resume-item">
 								<h2>Creative Designer</h2>
 								<span>2014 - 2013</span>
 								<p>Has fuisset scripserit et est munere ignota virtute cu, tota timeam.</p>
 							</div>
-						</div>
-
+						</div>-->
+						<!-- 
 						<div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="resume-item">
 								<h2>Web Designer</h2>
 								<span>2013 - 2012</span>
 								<p>Has fuisset scripserit et est munere ignota virtute cu, tota timeam.</p>
 							</div>
-						</div>
+						</div>-->
 
 					</div><!-- Page 1 End -->
 
-					<div class="carousel-item">
+				<!--	<div class="carousel-item">
 
 						<div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="top-item resume-item">
@@ -315,7 +315,8 @@
 							</div>
 						</div>
 
-					</div><!-- Page 2 end -->
+					</div>-->
+					<!-- Page 2 end -->
 
 				</div>
 				<!-- Carousel end -->
@@ -325,14 +326,14 @@
 		</section>
 		<!-- Section Resume end -->
 
-		<!-- Section Works -->
+		<!-- Section Works
 		<section id="works" class="works clearfix">
 			
 			<div class="section-header">
 				<h2>Portfolio</h2>
 			</div>
-
-			<!-- Control -->
+			 -->
+			<!-- Control 
 			<div class="control">
 				<ul>
 					<li class="active"><a class="filter" data-filter="all">All Projects</a></li>
@@ -342,8 +343,9 @@
 					<li><a class="filter" data-filter="4">Video</a></li>
 				</ul>
 			</div>
+			-->
 
-			<!-- Items Outer -->
+			<!-- Items Outer
 			<div class="item-outer row clearfix">
 				<div class="col-md-4 col-sm-6 col-xs-12 filtr-item" data-category="1" data-sort="value">
 					<div class="item">
@@ -434,14 +436,14 @@
 						<img src="http://placehold.it/500x500" alt="portfolio">
 					</div>
 				</div>
-			</div>
-			<!-- Items Outer end -->
+			</div> -->
+			<!-- Items Outer end 
 
 			<div class="more-items clearfix">
 				<a href="portfolio.html"><i class="fa fa-th-large" aria-hidden="true"></i>More Projects</a>
 			</div>
 
-		</section>
+		</section>-->
 		<!-- Section Works end -->
 
 		<!-- Section Testimonials 
@@ -497,16 +499,16 @@
 				</div>
 
 			</div>-->
-			<!-- Carousel end -->
+			<!-- Carousel end 
 
-		</section>
+		</section>-->
 		<!-- Section Testimonials end -->
 
 		<!-- Section Blog -->
 		<section id="blog" class="blog">
 			
 			<div class="section-header">
-				<h2>Blog News</h2>
+				<h2>Experiencia</h2>
 			</div>
 
 			<!-- Item 1 -->
