faltan arreglar unas imagenes pero en general ya fuciona ya se va a subir al hosting gratuito

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
 				
 				<li class="current"><a href="#welcome">Bienvenido</a></li>
 				<li><a href="#about">Acerca de Yhon</a></li>
-				<li><a href="#resume">Resume</a></li>
-				<li><a href="#works">Works</a></li>
-				<li><a href="#blog">Blog</a></li>
+				<li><a href="#resume">Educación</a></li>
+				<li><a href="#blog">Experiencia Laboral</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -198,7 +197,7 @@
 		<section id="facts" class="facts">
 
 			<div class="section-header-light">
-				<h2>Fun Facts</h2>
+				<h2></h2>
 			</div>
 			<!--
 			<div class="row">
@@ -514,15 +513,21 @@
 			<!-- Item 1 -->
 			<div class="item">
 				<div class="row">
-					<div class="thumb col-md-4 col-sm-3 col-xs-12">
-						<img src="http://placehold.it/180x180" alt="blog-post">
-					</div>
+					
 					<div class="text col-md-8 col-sm-9 col-xs-12">
-						<h2>First Blog Post Title</h2>
-						<p>Lorem ipsum dolor sit amet, viris decore eu ius, his natum labores cu. Ius vidit nominavi no. At mei officiis forensibus quaerendum.</p>
+						<h2>Practicante en el departamento de TI</h2>
+						<p>17 de enero de 2018- 17 de julio de 2018</p>
+						<ul>
+							<li> Administración de servicios de Nube Microsoft Azure.</li>
+							<li> Gestión logística de sistemas.</li>
+							<li> Gestión logística del área de ventas y mercadeo.</li>
+							<li> Gestión de talento Humano.</li>
+						  </ul>
+						<a href="https://fenixalliance.com.co/" class="btn btn-default">Ver Página</a>
 
-						<a href="blog-single.html" class="btn btn-default">Read more</a>
-
+					</div>
+					<div class="thumb col-md-4 col-sm-3 col-xs-12">
+						<img src="/assets/images/talsa2.jpg" alt="Logo Talsa">
 					</div>
 				</div>
 			</div>
@@ -531,19 +536,19 @@
 			<div class="item">
 				<div class="row">
 					<div class="thumb col-md-4 col-sm-3 col-xs-12">
-						<img src="http://placehold.it/180x180" alt="blog-post">
+						<img src="/assets/images/Logo.png" alt="Logo Fenix Alliance">
 					</div>
 					<div class="text col-md-8 col-sm-9 col-xs-12">
 						<h2>Second Blog Post Title</h2>
 						<p>Lorem ipsum dolor sit amet, cum partem melius nostrum te, cu pri quis dicant accusamus. Ius vidit nominavi no. At mei officiis forensibus quaerendum.</p>
 
-						<a href="blog-single.html" class="btn btn-default">Read more</a>
+						<a href="https://fenixalliance.com.co/" class="btn btn-default">Ver Página</a>
 
 					</div>
 				</div>
 			</div>
 
-			<!-- Item 3 -->
+			<!-- Item 3 
 			<div class="item">
 				<div class="row">
 					<div class="thumb col-md-4 col-sm-3 col-xs-12">
@@ -557,23 +562,18 @@
 
 					</div>
 				</div>
-			</div>
+			</div>-->
 
-			<div class="more-items">
-				<a href="blog.html"><i class="fa fa-th-large" aria-hidden="true"></i>More Posts</a>
-			</div>
-
+			
 		</section>
 		<!-- Section Blog end -->
 
 		<!-- Section Customers -->
-		<section id="customers" class="customers">
+		<section id="customers" class="customers" >
 			
-			<div class="section-header-light">
-				<h2>Customers</h2>
-			</div>
+			
 
-			<!-- Carousel -->
+			<!-- Carousel
 			<div class="customer-carousel">
 
 				<div class="item">
@@ -595,7 +595,7 @@
 					<img src="http://placehold.it/130x20" alt="client">
 				</div>
 
-			</div>
+			</div> -->
 			<!-- Carousel end -->
 
 			<div class="overlay"></div>
@@ -607,47 +607,47 @@
 		<section id="contact" class="contact">
 			
 			<div class="section-header">
-				<h2>Get In Touch</h2>
+				<h2>Contactame</h2>
 			</div>
 
 			<!-- Contact Form -->
-			<form method="post" action="form/contactform.php">
+			<form method="post" action="https://formspree.io/f/meqwbwke">
 
 				<div class="row"><!-- Row -->
 
 					<div class="col-md-6 col-sm-6 col-xs-12"><!-- Name input -->
 						<div class="form-group">
-							<input type="text" class="form-control" name="InputName" id="InputName" placeholder="Your Name" required>
+							<input type="text" class="form-control" name="InputName" id="InputName" placeholder="Tu Nombre" required>
 						</div>
 					</div>
 
 					<div class="col-md-6 col-sm-6 col-xs-12"><!-- Email input -->
 						<div class="form-group">
-							<input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Your Email" required>
+							<input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Tu Email" required>
 						</div>
 					</div>
 
 					<div class="col-md-6 col-sm-6 col-xs-12"><!-- Phone input -->
 						<div class="form-group">
-							<input type="text" class="form-control" name="InputPhone" id="InputPhone" placeholder="Phone (optional)">
+							<input type="text" class="form-control" name="InputPhone" id="InputPhone" placeholder="Celular (opcional)">
 						</div>
 					</div>
 
 					<div class="col-md-6 col-sm-6 col-xs-12"><!-- Subject input -->
 						<div class="form-group">
-							<input type="text" class="form-control" id="InputSubject" name="InputSubject" placeholder="Subject">
+							<input type="text" class="form-control" id="InputSubject" name="InputSubject" placeholder="Asunto">
 						</div>
 					</div>
 
 					<div class="col-md-12 col-sm-12 col-xs-12"><!-- Message textarea -->
 						<div class="form-group">
-							<textarea name="InputMessage" id="InputMessage" class="form-control" rows="6" placeholder="Message" required></textarea>
+							<textarea name="InputMessage" id="InputMessage" class="form-control" rows="6" placeholder="Mensaje" required></textarea>
 						</div>
 					</div>
 
 				</div><!-- Row end -->
 
-				<input type="submit" name="submit" id="submit" value="Send Message" class="btn btn-default pull-left"><!-- Send Button -->
+				<input type="submit" name="submit" id="submit" value="Enviar Mensaje" class="btn btn-default pull-left"><!-- Send Button -->
 
 			</form>
 			<!-- Contact Form end -->
